# Comfyui-Index-TTS2

./: ACCELERATION_FEATURES.md  EMOTION_TEXT_FIX.md  INTEGRATION_COMPLETE.md  LICENSE  PUBLISHING_GUIDE.md  README.md  UPDATE_INSTRUCTIONS.md  audio_cache.json  basic_tts_node.py  duration_control_node.py  pyproject.toml
.github/workflows/: publish.yml
indextts/: infer_v2.py
indextts/accel/: accel_engine.py
indextts/gpt/: model_v2.py
indextts/s2mel/modules/: commons.py
nodes/: advanced_control_node.py  basic_tts_node.py  emotion_control_node.py  emotion_voice_multi_talk_node.py  model_manager_node.py  multi_talk_node.py
