[project]
name = "comfyui-indextts2"
description = "ComfyUI-Index-TTS2 is a custom node plugin for ComfyUI that packages the core functionality of IndexTTS2 (long-form, multi-speaker, multi-dialect podcast voice generation) into a visual workflow"
version = "1.0.3"
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: GPU :: NVIDIA CUDA",
    "Environment :: GPU :: AMD ROCm",
    "Environment :: GPU :: Apple Metal",
]

[project.urls]
Repository = "https://github.com/xuchenxu168/Comfyui-Index-TTS2"
"Bug Tracker" = "https://github.com/xuchenxu168/Comfyui-Index-TTS2/issues"

[tool.comfy]
PublisherId = "xuchenxu168"
DisplayName = "ComfyUI-Index-TTS2"
Icon = ""
Banner = ""

